# WASD_project

./: .gitignore  README.md  아두이노 회로도.fzz  아두이노 회로도1.fzz
.myvenv/: pyvenv.cfg
.myvenv/Scripts/: activate  activate.bat
src/arduino/linetracing_test_v2/: linetracing_test_v2.ino
src/arduino/linetracing_test_v3/: linetracing_test_v3.ino
src/connectwo_line_tracing/: README.md
src/connectwo_line_tracing/controller/: line_follower.py
src/connectwo_line_tracing/firmware/raspberrypi/: cam_sensors.py  requirements.txt  sensor.py
src/connectwo_line_tracing/robot/: hardware.yaml
src/connectwo_line_tracing/utils/: .gitignore
src/stm32/.metadata/: .log4j2.xml  version.ini
src/stm32/WASD_Project/: .cproject  .project  WASD_Project Debug.launch  WASD_Project.ioc
src/stm32/WASD_Project/Debug/: WASD_Project.elf  makefile  (+2 more)
src/wasd_ws/: README.md  controller_params.yaml  frames_2025-11-05_17.01.40.gv  frames_2025-11-21_16.33.20.gv  frames_2025-11-21_16.34.23.gv  wasd_map.yaml  wasd_map_clean.pgm  wasd_map_clean.yaml  wasd_map_clean2.pgm  wasd_map_clean2.yaml  wasd_map_clean3.pgm  wasd_map_clean3.yaml
src/wasd_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/wasd_ws/log/: latest_build
src/wasd_ws/src/wasd_bringup/: package.xml  setup.cfg  setup.py
src/wasd_ws/src/wasd_bringup/launch/: nav.launch.edit3.py  nav.launch.py  nav.launch_backup.py  teleop_keyboard.launch.py  turtlebot3_state_publisher.launch.py
src/wasd_ws/src/wasd_bringup/param/: burger.yaml  burger_backup.yaml
src/wasd_ws/src/wasd_bringup/wasd_bringup/: forward_5s.py  teleop_keyboard.py  wasd_goal_proxy.py
web_front/: index.html
(+30 files in other folders)
